<resources>
    <string name="app_name">WE志愿</string>

    <string name="url">http://115.238.150.174:5018/</string>

    <string name="tv_scan">扫一扫</string>
    <string name="tv_appName">WE志愿</string>
    <string name="changeTv_homepage">主页</string>
    <string name="changeTv_find">发现</string>
    <string name="changeTv_signin">签到</string>
    <string name="changeTv_myself">我的</string>
    <string name="title_nickname">昵称</string>
    <string name="tv_submit">提交</string>
    <string name="tv_show_nickname">显示昵称</string>
    <string name="check_show_real_name">显示真实姓名</string>
    <string name="tv_original_password">原密码 </string>
    <string name="tv_new_password">新密码</string>
    <string name="tv_confirm_password">确认密码</string>
    <string name="hint_original_password">请输入原密码</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_confirm_password">再次输入密码</string>
    <string name="title_set_password">设置密码</string>
    <string name="title_mobile_phone">手机号码</string>
    <string name="tv_verification_code">验证码</string>
    <string name="btn_verification_code">获取验证码</string>
    <string name="hint_mobile_phone">请输入手机号码</string>
    <string name="hint_verification_code">请输入验证码</string>
    <string name="title_about_us">关于我们</string>
    <string name="tv_version_number">版本号 : 2.0.1</string>
    <string name="tv_Organizer">主办方 : 宁波团市委</string>
    <string name="tv_official_website">官方网站 : www.nbzyz.org</string>
    <string name="hint_report_problem">请输入反馈问题</string>
    <string name="title_report_problem">反馈问题</string>
    <string name="title_common_problem">常见问题</string>
    <string name="title_major_selection">专业选择</string>
    <string name="title_residence">现居住地址</string>
    <string name="hint_residence">请输入现居住地址</string>
    <string name="tv_certificate_uoload">证书上传</string>
    <string name="title_professional_ability">专业能力</string>
    <string name="hint_professional_ability">请输入专业能力</string>
    <string name="title_service_category">意向志愿服务类别</string>
    <string name="title_area_selection">区域选择</string>
    <string name="title_forgot_password">找回密码</string>
    <string name="tv_account">账　号</string>
    <string name="hint_account">请输入用户名或证件号</string>
    <string name="tv_morning">上午</string>
    <string name="tv_afternoon">下午</string>
    <string name="tv_night">晚上</string>
    <string name="title_affiliated_institution">所属机构</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--activity login and register-->
    <string name="hint_login_username">用户名</string>
    <string name="hint_login_password">密码</string>
    <string name="tv_login_forgot_password">忘记密码</string>
    <string name="btn_login">登 录</string>
    <string name="btn_register">注 册</string>
    <string name="title_register">注册志愿者</string>
    <string name="tv_next">下一步</string>
    <string name="tv_register_nickname">昵　称</string>
    <string name="tv_register_name">姓　名</string>
    <string name="tv_id_number">证件号码</string>
    <string name="tv_Email">电子邮箱</string>
    <string name="tv_id_number_type">证件类型</string>
    <string name="tv_mobile_phone">手机号码</string>
    <string name="tv_personal_attribute">个人属性</string>
    <string name="tv_register_verification_code">验 证 码</string>
    <string name="hint_register_name">请输入姓名</string>
    <string name="hint_id_number_type">==请选择==</string>
    <string name="hint_id_number">请输入证件号码</string>
    <string name="hint_Email">请输入电子邮箱</string>
    <string name="hint_school">在校</string>
    <string name="hint_job">在职</string>
    <string name="hint_retire">退休</string>
    <string name="hint_register_password">请输入登录密码</string>
    <string name="hint_register_Repassword">请再次确认密码</string>
    <string name="hint_register_nickname">请输入昵称</string>
    <string name="tv_register_password">登录密码</string>
    <string name="tv_register_Repassword">确认密码</string>
    <string name="btn_existing_login">已有账号　点击登录</string>
    <string name="tv_register_agree">注册表示您同意《宁波市注册志愿者管理办法》</string>

    <!--activity register pro bono-->
    <string name="title_register_pro_bono">注册专业志愿者</string>
    <string name="tv_area">所在区域</string>
    <string name="tv_organization">所属机构</string>
    <string name="tv_politics_status">政治面貌</string>
    <string name="tv_speciality_advantages">专业特长</string>
    <string name="tv_work_unit">现工作单位</string>
    <string name="tv_family_address">现家庭住址</string>
    <string name="tv_intention_time">意向时间</string>
    <string name="tv_intention_type">意向类别</string>
    <string name="tv_professional_ability">专业能力</string>
    <!--activity apply pro bono-->
    <string name="title_apply_pro_bono">申请专业志愿者</string>
    <string name="btn_apply">申 请</string>

    <!--fragment map Sign in -->
    <string name="btn_sign_in">签 到</string>
    <string name="btn_sign_out">签 退</string>

    <!--personalData-->
    <string name="myArea_item_text">所在区域</string>
    <string name="myORG_item_text">所属机构</string>


</resources>
