<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.renhao.wevolunteer.activity.RegisterProBonoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_homepage_height"
        android:background="@color/colorCyan">
        <ImageView
            android:layout_width="@dimen/imageview_homepage_magnifierSize"
            android:layout_height="@dimen/imageview_homepage_magnifierSize"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/actionbar_homepage_margin"
            android:layout_marginStart="@dimen/actionbar_homepage_margin"
            android:src="@drawable/icon_indicator"
            android:id="@+id/imageView" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/title_apply_pro_bono"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:layout_centerInParent="true"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_next"
            android:textSize="@dimen/textview_right_titlesize"
            android:gravity="center_vertical"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/textview_homepage_titlesize"
            android:layout_marginEnd="@dimen/textview_homepage_titlesize"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_register_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginLeft="23dp"
                    android:layout_marginStart="23dp"
                    android:hint="@string/hint_register_name"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_id_number"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:hint="@string/hint_id_number"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_personal_attribute"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="15dp"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_school"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_job"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_retire"/>
            </LinearLayout>

            <include layout="@layout/include_pro_bono"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_mobile_phone"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    android:padding="15dp"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:inputType="phone"
                    android:hint="@string/hint_mobile_phone"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textSize="15sp"/>
                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/btn_verification_code"
                    android:background="@drawable/btn_verification_code_bg"
                    android:textColor="@color/colorCyan"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_register_verification_code"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:hint="@string/hint_verification_code"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_register_agree"
                    android:textStyle="bold"
                    android:textColor="@color/colorCyan"/>
            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/btn_login"
                android:layout_margin="15dp"
                android:text="@string/btn_apply"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
