<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDarkDarkWhite"
    tools:context="com.example.renhao.wevolunteer.activity.SetPasswordActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_homepage_height"
        android:background="@color/colorCyan">
        <ImageView
            android:layout_width="@dimen/imageview_homepage_magnifierSize"
            android:layout_height="@dimen/imageview_homepage_magnifierSize"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/actionbar_homepage_margin"
            android:layout_marginStart="@dimen/actionbar_homepage_margin"
            android:src="@drawable/icon_indicator"
            android:id="@+id/imageView" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/title_set_password"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:layout_centerInParent="true"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_submit"
            android:textSize="@dimen/textview_right_titlesize"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="@dimen/textview_homepage_titlesize"
            android:layout_marginEnd="@dimen/textview_homepage_titlesize"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_single_input"
        android:layout_marginTop="@dimen/actionbar_homepage_margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_original_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@color/colorWhite"
            android:inputType="textPassword"
            android:hint="@string/hint_original_password"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_single_input"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_new_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:background="@color/colorWhite"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_single_input"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_confirm_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:inputType="textPassword"
            android:hint="@string/hint_confirm_password"
            android:textSize="15sp"/>
    </LinearLayout>


</LinearLayout>
