<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.renhao.wevolunteer.activity.RegisterProBonoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_homepage_height"
        android:background="@color/colorCyan">
        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/linearlayout_back"
            android:onClick="back">
            <ImageView
                android:layout_width="@dimen/imageview_homepage_magnifierSize"
                android:layout_height="@dimen/imageview_homepage_magnifierSize"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/actionbar_homepage_margin"
                android:layout_marginStart="@dimen/actionbar_homepage_margin"
                android:src="@drawable/icon_indicator"
                android:id="@+id/imageView" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/title_register_pro_bono"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:layout_centerInParent="true"
            android:id="@+id/textView" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/tv_register_nickname"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_register_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="23dp"
                    android:layout_marginStart="23dp"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_register_nickname"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_register_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="15dp"/>
                <EditText
                    android:id="@+id/et_register_trueName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginLeft="23dp"
                    android:layout_marginStart="23dp"
                    android:hint="@string/hint_register_name"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_credentials_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/linearlayout_select"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/tv_id_number_type"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_credentials_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="==请选择=="
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:layout_weight="0.9"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:src="@drawable/icon_right_indicator" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_id_number"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="15dp"/>
                <EditText
                    android:id="@+id/et_register_id_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:hint="@string/hint_id_number"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/tv_Email"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_Email"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/tv_register_password"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:inputType="textPassword"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_register_password"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/tv_register_Repassword"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_register_Repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:inputType="textPassword"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_register_Repassword"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_personal_attribute"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/linearlayout_select"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/tv_personal_attribute"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:src="@drawable/icon_right_indicator" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d9d9d9"
                />

            <include layout="@layout/include_pro_bono"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_mobile_phone"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="15dp"/>
                <EditText
                    android:id="@+id/et_register_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:inputType="phone"
                    android:hint="@string/hint_mobile_phone"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textSize="15sp"/>
                <Button
                    android:id="@+id/btn_register_verification_code"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/btn_verification_code"
                    android:background="@drawable/btn_verification_code_bg"
                    android:textColor="@color/colorCyan"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_single_input"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_register_verification_code"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="15dp"/>
                <EditText
                    android:id="@+id/et_register_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:hint="@string/hint_verification_code"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cb_register_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_register_agree"
                    android:textStyle="bold"
                    android:textColor="@color/colorCyan"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_register_volunteer"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/bg_btn_selected"
                android:layout_margin="15dp"
                android:text="@string/btn_register"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btn_back_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/bg_btn_two_selected"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/btn_existing_login"
                android:textSize="18sp"
                android:textColor="@color/colorCyan"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
